--- a/static/landing/index.html
+++ b/static/landing/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<title>The Surge .Club</title>
 		<link rel="stylesheet" href="style.css">
+		<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
+
 	</head>
 	<body>
 		<div class="container">
